[package]
name = "vital-investments-rs"
version = "0.1.0"
authors = ["Aaron Winter <winter.aaron93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1